# k4ActsTracking

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  config.h  empty_alg.py  env.sh  geosvc.py
.github/workflows/: .key4hep-build-env  acts-master-ci.yml  clang-format-check.yml  downstream-build.yaml  format-check.yml  luxe-ci.yml  mucoll-ci.yml  pre-commit.yml  test.yml
ACTSTracking/: ACTSAlgBase.hxx  GeometryIdMappingTool.hxx  GeometryIdSelector.hxx  Helpers.hxx
GNNTrackFinding/: CMakeLists.txt  README.md
GNNTrackFinding/include/: ONNXInferenceModel.h
GNNTrackFinding/options/: runGNNTrackFinding.py
GNNTrackFinding/src/: ExaTrkGNNTrackFinder.cpp  ExaTrkGNNTrackFinder.h  GNNTrackFinder.cpp  GNNTrackFinder.h  ONNXInferenceModel.cpp  OnnxMetricLearning.cpp  OnnxMetricLearning.h
TrackFinding/: CMakeLists.txt  README.md
TrackFinding/include/: NodeEmbeddingModel.h  ONNXInferenceModel.h
TrackFinding/options/: runGNNTrackFinding.py
TrackFinding/src/: ExaTrkGNNTrackFinder.cpp  ExaTrkGNNTrackFinder.h  NodeEmbeddingModel.cpp  ONNXInferenceModel.cpp  OnnxMetricLearning.cpp  OnnxMetricLearning.h
ci/: format.sh
cmake/: MaybeBuildActs.cmake  createk4ActsTrackingConfig.cmake  k4ActsTrackingConfig.cmake  k4ActsTrackingConfig.cmake.in
data/: CMakeLists.txt  MAIA_v0.json  MAIA_v0.root  MAIA_v0_material.json  MuSIC_v1.root  MuSIC_v2.json  download_files.sh  file_list.txt
doc/: ReleaseNotes.md
example/: CMakeLists.txt
k4ActsTracking/: CMakeLists.txt
k4ActsTracking/examples/: plot_steps.py  test_visualize_acts_geo.py  visActsGEo.py
k4ActsTracking/include/k4ActsTracking/: ACTSAlgBase.hxx  ACTSDuplicateRemoval.hxx  ACTSSeededCKFTrackingAlg.hxx  ActsGaudiLogger.h  CKFRunner.hxx  CKFTracking.hxx  CellIDSelector.h  FilterTracksAlg.hxx  GeometryContainers.hxx  GeometryIdMappingTool.hxx  GeometryIdSelector.hxx  Helpers.hxx  IActsGeoSvc.h  ITrackerMappingSvc.h  KFRunner.hxx  Measurement.hxx  MeasurementCalibrator.hxx  RunnerCommon.hxx  SeedSpacePoint.hxx  SourceLink.hxx  SpacePointContainer.hxx  TrackTruthAlg.hxx
k4ActsTracking/options/: createExampleEventData.py  run_acts_plugin.py
k4ActsTracking/share/: geosvc.py
k4ActsTracking/src/: ActsGaudiLogger.cpp  CellIDSelector.cxx
k4ActsTracking/src/components/: ACTSAlgBase.cxx  ACTSDuplicateRemoval.cxx  ACTSLogger.h  ACTSSeededCKFTrackingAlg.cxx  ActsAlg.cpp  ActsAlg.h  ActsGeoGen3PlaneSvc.cpp  ActsGeoGen3PlaneSvc.h  ActsGeoGen3Svc.cpp  ActsGeoGen3Svc.h  ActsGeoSvc.cpp  ActsGeoSvc.h  ActsTestPropagator.cpp  CKFTrackingAlg.cpp  CKFTrackingFromSeedsAlg.cpp  DD4hepBlueprintConstruction.cpp  DD4hepBlueprintConstruction.h  DumpSimTrackerHitCellIDAlg.cpp  DumpSimTrackerHitCellIDAlg.h  EmptyAlg.cpp  EmptyAlg.h  FilterTracksAlg.cxx  GeoSvc.cpp  GeoSvc.h  GeometryIdMappingTool.cxx  GeometryIdSelector.cxx  Helpers.cxx  IActsGeoSvc.h  IGeoSvc.h  PropagateToHitSurfaceAlg.cpp  PropagateToHitSurfaceAlg.h  TrackTruthAlg.cxx  TrackerMappingSvc.cpp  TrackerMappingSvc.h  config.h.in
k4ActsTracking/src/dd4hepplugin/: actsdd4hepplugin.cpp
src/: ACTSAlgBase.cxx  ACTSDuplicateRemoval.cxx  ACTSSeededCKFTrackingAlg.cxx  GeometryIdMappingTool.cxx  GeometryIdSelector.cxx  TrackTruthAlg.cxx
test/: CMakeLists.txt
test/options/: CLD_CKFTracking.py  ILD_CKFTracking.py  LUXE_CKFTracking.py  MAIA_CKFTrackingAlg.py  MAIA_CKF_Tracking.py  _ckf_helpers.py  checkMapping.py  geosvc.py  load_geometry.py  visActsGEo.py  visActsPlaneGeo.py
test/options/test_helpers/: _ckf_helpers.py
test/unittests/: CMakeLists.txt  CellIDSelectionTests.cpp  HelpersTests.cpp  ONNXInferenceModelTests.cpp
tests/: CMakeLists.txt  embedding_model_inference.cpp  embedding_model_inference.py  embedding_model_validation.py  validate_embedding_model.sh
